# transactions-analyzer

./: Dockerfile  Pipfile  README.md  app.py  cmds.txt  compose.yaml  export.json  main.py  pdf_extract.txt  pyproject.toml  requirements.txt  start_ps.sh  tasks.py  web.env
foo/: foo-page-1-table-1.json  foo-page-1-table-2.json
src/: load_pdf.py
templates/: index.html
